# stellar

./: Cargo.toml  README.md
contracts/arbitrage-bot/: Cargo.toml  makefile
contracts/arbitrage-bot/src/: dex.rs  lib.rs  reflector.rs  test.rs  types.rs  utils.rs
contracts/arbitrage-bot/test_snapshots/test/: test_add_and_get_pairs.1.json  test_emergency_stop.1.json  test_enhanced_pair_management.1.json  test_initialize_contract.1.json  test_keeper_management.1.json  test_pair_pause_functionality.1.json  test_performance_metrics.1.json  test_trading_venue_management.1.json
contracts/dao-governance/: Cargo.toml
contracts/dao-governance/src/: lib.rs
contracts/risk-manager/: Cargo.toml
contracts/risk-manager/src/: lib.rs  test.rs
contracts/shared-types/: Cargo.toml
contracts/shared-types/src/: lib.rs
contracts/trading-strategies/: Cargo.toml
contracts/trading-strategies/src/: lib.rs  test.rs
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  stellar-connect.tsx
frontend/app/dao/: page.tsx
frontend/bindings/: README.md  package-lock.json
frontend/components/: advanced-crypto-data.tsx  animated-background.tsx  cryptochart.tsx  faq.tsx  hero.tsx  message.tsx  piechart.tsx  search-modal.tsx  statisticsCard.tsx
frontend/daobindings/: README.md  package-lock.json
frontend/hooks/: useAddPair.tsx  useAdvancedOpportunities.tsx  useCryptoChart.tsx  useMessage.tsx  useProposals.tsx  useRebalance.tsx  useUserBalance.tsx  useWallet.tsx
frontend/services/: contract-service.ts
(+32 files in other folders)
