[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "arbitrage_bot"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
shared-types = { workspace = true }
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
